--- a/systemBuilderHTML.html
+++ b/systemBuilderHTML.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="systemBuilder.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
 
 
