restarted styles, refactored HTML, started restyling header text

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<title>System Builder V 0.0.1</title>
 
-	<link rel="stylesheet" type="text/css" href="systemBuilder.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!--<link rel="stylesheet" type="text/css" href="systemBuilder.css">-->
+	<link rel='stylesheet' href='styles.css'>
 
 </head>
 
@@ -15,7 +15,7 @@
 <body class="noisy">
 <div class="piece output">
 <div class="centeredElement">	
-<pre class="ASCII">
+<pre class="ascii-title">
 ---------------------------------------------------------------------------------------------------------
 
   ###### ###  ##  ###### ######## ######  ###  ##  #######  ###  ## #### ####    ######   ###### ####### 
