--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<!--<link rel="stylesheet" type="text/css" href="systemBuilder.css">-->
+	<script type="text/javascript" src="main.js" defer></script>
+	<script type="text/javascript" src="systemBuilderScript.js" defer></script>
+	<script type="text/javascript" src="domManipulation.js" defer></script>
 	<link rel='stylesheet' href='styles.css'>
-
 </head>
 
 
@@ -62,12 +64,10 @@
 
 		</div>
 	</div>
-
 	<div class='container textContainer'>
 		<h1>System Builder V 0.0.1</h1>
 		<p> A work in progress procedural star system generator. Hit the 'Generate' button below to create your system. Currently the generator will create G-type main-sequence stars, and a planetary system of between 1 and 10 planets.</p>
 		<p>Coming next: Procedural star names and correct planet names, better planet distribution, more stellar and planetary characteristics, refinement to generate the system and planets from a single pre-stellar cloud, moons, other star types, comets and asteroids, binaries and multiple star systems, exotic stars.</p>
 	</div>
 </body>
-<script type="text/javascript" src="systemBuilderScript.js"></script>
 </html>
