moving html manipulation to it's own js

--- a/index.html
+++ b/index.html
@@ -38,26 +38,8 @@
 				<input type='text' id='systemNameInput' name='systemNameEntry'>
 				<button type="button" id="generate" class="button">Generate!</button>
 			</div>
-			<div class='container textContainer'>
-				<h4 id='starName'>Star</h4>
-				<table id="mainTable">
-					<tr>
-						<th>Star Name</th>
-						<th>Mass (M⊕)</th>
-						<th>Age (bya)</th>
-						<th>Size (R⊕)</th>
-						<th>Type (Stellar Class)</th>
-					</tr>
-					<tr id="starDetails"></tr>
-				</table>
-				<h4>Planets</h4>
-				<table id="planetDetails">
-					<tr>
-						<th>Name</th>
-						<th>Orbital Distance (AU)</th>
-						<th>Year Length (Earth Days)</th>
-					</tr>
-				</table>
+			<div id='systemDetails' class='container textContainer'>
+
 			</div>
 		</div>
 		<div id='systemViewer' class='float container'>
