refactoring dom manipulation script

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 				<button type="button" id="generate" class="button">Generate!</button>
 			</div>
 			<div id='systemDetails' class='container textContainer'>
-
+				<h2>NO DATA</h2>
 			</div>
 		</div>
 		<div id='systemViewer' class='float container'>
-
+			<h2>NO DATA</h2>
 		</div>
 	</div>
 	<div class='container textContainer'>
