--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>System Builder V 0.0.1</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
 	<!--<link rel="stylesheet" type="text/css" href="systemBuilder.css">-->
 	<script type="text/javascript" src="main.js" defer></script>
 	<script type="text/javascript" src="systemBuilderScript.js" defer></script>
