--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="systemBuilderScript.js" defer></script>
 	<script type="text/javascript" src="domManipulation.js" defer></script>
 	<link rel='stylesheet' href='styles.css'>
+	<link rel='stylesheet' href='systemViewerStyles.css'>
 </head>
 
 
@@ -37,11 +38,25 @@
 		<button type="button" id="generate" class="button">Generate!</button>
 	</div>
 	<div id='systemViewer' class='container'>
-		<h2>NO DATA</h2>
+		<div id='universe'>
+			<div id='galaxy'>
+				<div id='sun'></div>
+				<div id="mercury" class="orbit">
+					<div class='pos'>
+						<div class="planet"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--<h2>NO DATA</h2>-->
 	</div>
 	<div class='floatContainer'>
 		<div class='sideBar float'>
 			<div id='systemDetails' class='container textContainer'>
+
+
+
 				<h2>NO DATA</h2>
 			</div>
 		</div>
