started adding functions to display system, added star and frames

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="main.js" defer></script>
 	<script type="text/javascript" src="systemBuilderScript.js" defer></script>
 	<script type="text/javascript" src="domManipulation.js" defer></script>
+	<script type="text/javascript" src="systemDisplay.js" defer></script>
 	<link rel='stylesheet' href='styles.css'>
 	<link rel='stylesheet' href='systemViewerStyles.css'>
 </head>
@@ -38,18 +39,23 @@
 		<button type="button" id="generate" class="button">Generate!</button>
 	</div>
 	<div id='systemViewer' class='container'>
-		<div id='universe'>
-			<div id='galaxy'>
-				<div id='sun'></div>
-				<div id="mercury" class="orbit">
-					<div class='pos'>
-						<div class="planet"></div>
-					</div>
-				</div>
-			</div>
-		</div>
+		<!--<div id='universe'>-->
+			<!--<div id='galaxy'>-->
+				<!--<div id='star'></div>-->
+				<!--<div id="mercury" class="orbit">-->
+					<!--<div class='pos'>-->
+						<!--<div class="planet"></div>-->
+					<!--</div>-->
+				<!--</div>-->
+				<!--<div id="venus" class="orbit">-->
+					<!--<div class='pos'>-->
+						<!--<div class="planet"></div>-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+		<!--</div>-->
 
-		<!--<h2>NO DATA</h2>-->
+		<h2>NO DATA</h2>
 	</div>
 	<div class='floatContainer'>
 		<div class='sideBar float'>
