--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="systemBuilderScript.js" defer></script>
 	<script type="text/javascript" src="domManipulation.js" defer></script>
 	<script type="text/javascript" src="systemDisplay.js" defer></script>
+	<script type="text/javascript" src="scientistList.js" defer></script>
 	<link rel='stylesheet' href='styles.css'>
 	<link rel='stylesheet' href='systemViewerStyles.css'>
 </head>
