started refifing the final main styles for the ppage

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<title>System Builder V 0.0.1</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
-	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-	<!--<link rel="stylesheet" type="text/css" href="systemBuilder.css">-->
+	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 	<script type="text/javascript" src="main.js" defer></script>
 	<script type="text/javascript" src="systemBuilderScript.js" defer></script>
 	<script type="text/javascript" src="domManipulation.js" defer></script>
@@ -19,19 +18,7 @@
 
 <body>
 	<div id='systemViewer' class='container'>
-		<pre>
----------------------------------------------------------------------------------------------------------
-
-  ###### ###  ##  ###### ######## ######  ###  ##  #######  ###  ## #### ####    ######   ###### #######
- ###  ## ###  ## ###  ## #  ###   ###  ## ### ###   ###  ## ###  ##  ###  ###     ### ##  ###  ## ###  ##
- ####    ###  ## ####       ###   ###     #######   ######  ###  ##  ###  ###     ###  ## ###     ###  ##
-  #####   #####   #####     ###   #####   ## # ##   ###  ## ###  ##  ###  ###     ###  ## #####   ######
-    ####   ###      ####    ###   ###     ## # ##   ###  ## ###  ##  ###  ###     ###  ## ###     ### ##
- ##  ###   ###   ##  ###    ###   ###  ## ##   ##   ###  ## ###  ##  ###  ###   # ### ##  ###  ## ###  ##
-  #####    ###    #####     ###   ######  ##   ##   ######   #####   ###  ####### #####   ######  ###  ##
-                                           ##                                                          ##
----------------------------------------------------------------------------------------------------------
-		</pre>
+		<h1>System Builder</h1>
 	</div>
 	<div class='floatContainer'>
 		<div class='sideBar float'>
