added more CSS styling for blur on title

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-	<title>System Builder V 0.0.1</title>
-
+	<title>System Builder V 1.0</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
 	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 	<script type="text/javascript" src="main.js" defer></script>
@@ -19,6 +18,7 @@
 <body>
 	<div id='systemViewer' class='container'>
 		<h1>System Builder</h1>
+		<p>Click the 'Generate' button below to start</p>
 	</div>
 	<div class='floatContainer'>
 		<div class='sideBar float'>
