refined styling for drop shadows and text shadows

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 
 <body>
 	<div id='systemViewer' class='container'>
-		<h1>System Builder</h1>
-		<p>Click the 'Generate' button below to start</p>
+		<h1>- - System Builder - -</h1>
+		<p>- - Click the 'Generate' button below to start - -</p>
 	</div>
 	<div class='floatContainer'>
 		<div class='sideBar float'>
 			<div id='systemDetails' class='container textContainer'>
 				<h2>NO DATA</h2>
+				<p>Generate a new system to retrieve data</p>
 			</div>
 		</div>
 		<div class='sideBar float'>
