added more styling and animations css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 		</div>
 		<div class='sideBar float'>
 			<div class='container textContainer'>
-				<h1>Generation Control</h1>
-				<p>Click to generate a new system:</p>
-				<button type="button" id="generate" class="button">Generate!</button>
+				<div id="generate" class="button">Generate a new system</div>
 			</div>
 			<div class='container textContainer'>
 				<h1>System Builder V 1.0</h1>
