--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<div class='container textContainer'>
 				<div id="generate" class="button">Generate a new system</div>
 				<h2>System Builder V 1.0</h2>
-				<p> A work in progress procedural star system generator. Hit the 'Generate' button below to create your system. Currently the generator will create G-type main-sequence stars, and a planetary system of between 1 and 10 planets.</p>
-				<p>Coming next: Procedural star names and correct planet names, better planet distribution, more stellar and planetary characteristics, refinement to generate the system and planets from a single pre-stellar cloud, moons, other star types, comets and asteroids, binaries and multiple star systems, exotic stars.</p>
+				<p>A work in progress procedural star system generator. Hit the button above to create a system.</p>
+				<p>Currently the generator will create G-type main-sequence stars, and a planetary system of between 1 and 10 planets using Javascript. Visualisation created with HTML and CSS. Find more design notes (and the code) on my Github.</p>
 			</div>
 		</div>
 	</div>
