--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<title>System Builder V 1.0</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
 	<link rel='stylesheet' href='styles.css'>
 	<link rel='stylesheet' href='systemViewerStyles.css'>
