--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 				<h2>System Builder V 1.0</h2>
 				<p>A work in progress procedural star system generator. Hit the button above to create a system.</p>
 				<p>Currently the generator will create G-type main-sequence stars, and a planetary system of between 1 and 10 planets using Javascript. Visualisation created with HTML and CSS. Find more design notes (and the code) on my Github.</p>
-				<a href='https://github.com/JKapella/SystemBuilderApp' target='_blank' class='github-button'><span aria-hidden="true" data-icon="&#eab0;" class="icon-github"></span>  <span class='git-text'>Github</span></a>
+				<a href='https://github.com/JKapella/SystemBuilderApp' target='_blank' class='github-button button'>
+					<span aria-hidden="true" data-icon="&#eab0;" class="icon-github"></span>  <span class='git-text'>Github</span>
+				</a>
 			</div>
 		</div>
 	</div>
